# uferris-hw

./: LICENSE  README.md
boards/Megalops Base Board/: BOM_uFerris Megalops Baseboard_Megalops PCB_2026-01-11.csv  BOM_uFerris Megalops Baseboard_Megalops Schematic_2025-11-02.csv  PickAndPlace_Megalops PCB_2025-11-02.xlsx  PickAndPlace_Megalops PCB_2026-01-11.xlsx
boards/Megalops Power Board/: BOM_uFerris Megalops Powerboard_Powerboard PCB_2026-01-11.csv  BOM_uFerris Megalops Powerboard_Powerboard Schematic_2025-11-02.csv  PickAndPlace_Powerboard PCB_2025-11-02.xlsx  PickAndPlace_Powerboard PCB_2026-01-11.xlsx
docs/: uFerris Evaluation Board Disclaimer.docx  uFerrisPinMapping.xlsx
firmware/Megalops_RevA.0.1_Demo_Test/: Cargo.toml  diagram.json
firmware/Megalops_v0.1_Demo_Test/: main_bkp.rs  wokwi.toml
firmware/Megalops_v0.1_Demo_Test/.cargo/: config.toml
